# zhihusync

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  DOCKER_BUILD.md  DOCKER_BUILD_GUIDE.md  DOCKER_HUB_CLEANUP.md  DOCKER_HUB_SETUP.md  Dockerfile  Dockerfile.base  Dockerfile.full  Dockerfile.minimal  Dockerfile.multistage  Dockerfile.optimized  Dockerfile.quick  Makefile  README.md  TEST_REPORT_V2.md  VERSION.md  ZHILUSYNC_AGENT_KNOWLEDGE.md  build-base.ps1  build-base.sh  build.sh  docker-compose.alternative.yml  docker-compose.build.yml  docker-compose.hub.yml  docker-compose.quick.yml  docker-compose.yml  entrypoint.sh  install.ps1  install.sh  nginx.conf  pyproject.toml  pytest.ini  (+10 more)
.github/: settings.yml
.github/workflows/: docker-build.yml  tests.yml
config/: config.example.yaml
docker/: README.md
docker/legacy/: Dockerfile.alpine  Dockerfile.base  Dockerfile.chromium.backup  docker-compose.alternative.yml
scripts/: backup.sh  check-docker.sh  debug_cookie.py  extract_cookie_from_chrome.py  get_cookie_auto.bat  get_cookie_auto.py  get_cookie_debug.bat  init.sh  install-browser.sh  requirements.txt  test_extraction_errors.sh
src/: __init__.py  __main__.py  alerts.py  app.py  config_loader.py  cookie_parser.py  crawler.py  db.py  image_generator.py  login.py  main.py  models.py  storage.py  timezone_utils.py  web.py
static/: test_errors.html
static/css/: admin.css  zhihu-theme.css
static/extension/: README.md  background.js  manifest.json  popup.html  popup.js
static/js/: admin.js
templates/: base.html  config.html  content.html  donate.html  index.html  logs.html
test/: __init__.py  cookies.json  test_crawler.py  test_storage.py  test_web.py
tests/: README.md  TESTING.md  conftest.py  pytest.ini  run_tests.py
tests/e2e/: test_batch_operations.py  test_extraction_errors.py  test_sidebar.py  test_sidebar_click.py  test_web_ui.py
tests/fixtures/: cookies.example.json  test_users.json
tests/integration/: test_api.py  test_extraction_errors_api.py  test_full_sync.py
tests/reports/: FULL_SYNC_TEST_REPORT.md  SYNC_IMPROVEMENT_REPORT.md
tests/unit/: test_crawler.py  test_storage.py
