[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhihusync"
version = "0.1.0"
description = "知乎点赞内容备份工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
    # Flake8-bugbear
    "B",
    # McCabe complexity
    "C901",
    # flake8-simplify
    "SIM",
]
ignore = [
    # Line too long (handled by formatter)
    "E501",
    # Module level import not at top of file
    "E402",
    # Within except clause, raise exceptions with raise ... from err
    "B904",
    # Missing type annotation for self/cls
    "ANN101", "ANN102",
    # Missing return type annotation for special methods
    "ANN204",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Cyclomatic complexity threshold
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Test files can have missing docstrings and annotations
"test/**/*.py" = ["D", "ANN"]
"*_test.py" = ["D", "ANN"]
"**/__init__.py" = ["D"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
show_error_codes = true
ignore_missing_imports = true

# 忽略特定的错误类型（逐步修复）
[[tool.mypy.overrides]]
module = [
    "src.crawler",
    "src.image_generator",
    "src.alerts",
    "src.storage",
    "src.config_loader",
]
ignore_errors = true
